...
                }
            }
            .id(viewModel.playlistListUpdate)
            .navigationDestination(for: PlaylistItem.Content.self) { content in
                HStack(spacing: 0) {
                    PlaylistView(
                        content: content,
                        selectedStream: $viewModel.selectedPlaylistStream,
                        focusedStream: $focusedStream,
                        reselectStream: $reselectStream,
                        reloadCurrentProgram: $reloadCurrentProgram
                    )
                    .frame(width: UIScreen.main.bounds.width / 2.8)
...

    @ViewBuilder
    private func _sidebarView() -> some View {
        PlaylistsView(
            selectedPlaylist: $viewModel.selectedPlaylist
        )
        .accessibilityIdentifier("sidebar")
#if os(macOS)
        .navigationSplitViewColumnWidth(min: 220, ideal: 250, max: 280)
#endif
#if os(iOS)
        .navigationBarTitle(String(localized: "Playlists"))
#endif
...
